--- a/projectfiles/projectcss.css
+++ b/projectfiles/projectcss.css
@@ -1,5 +1,5 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
-    background-color:blue;
-    color: #ffffff;
+    background-color:#abc2cc;
+    color:#3b3f5e;
 }
