--- a/projectfiles/projectcss.css
+++ b/projectfiles/projectcss.css
@@ -3,3 +3,8 @@ body {
     background-color:#abc2cc;
     color:#3b3f5e;
 }
+@media only screen and (max-width:600px){
+    body{max-width: 100%;
+        display:block;
+    font-size: larger;}
+    }
